Creat Choice component

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,20 @@
   flex-direction: column;
 }
 
-h2 {
+h3 {
   margin: 10px 0;
 }
 
 small {
   margin-bottom: 10px;
+}
+
+.choice-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.choice-wrapper span {
+  display: inline-block;
+  width: 20%;
 }
