Calculate poll persentages
As we didnt have the percentage in the API response we calculate it by defining a function in  utils and then set it to state

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,24 @@ small {
   display: inline-block;
   width: 20%;
 }
+
+.progress-root{
+  height: 5px;
+  background-color: #F5F7FA;
+  position: relative;
+  border-radius: 50px;
+  overflow: hidden;
+  margin-top: 10px;
+  width: 20%;
+}
+.progress-bar {
+  border-radius: 50px;
+  background-color: #e80808;
+  transition: transform .4s linear;
+  top: 0;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  transform-origin: left;
+}
